--- a/src/design/custom/structure/_vertical.scss
+++ b/src/design/custom/structure/_vertical.scss
@@ -37,7 +37,8 @@
     z-index: 1001;
     background: $sidebar-bg;
     bottom: 0;
-    margin-top: 0;
+    margin-top: 20px;
+    border-radius: 8px;
     position: fixed;
     top: $header-height;
     box-shadow: $box-shadow;
